# fool

./: CMakeLists.txt  LICENCE.txt  ProjectHome.md  README.md  cons.hpp  gclab  hof.hpp  interview.txt  linkedin_interview.txt  tf-estimator.md  tf_estimator.py  thin-lto.md  thinlto-overview.dot
ClangProject/: ASTConsumer.hpp  DumpPPTokens.cpp  TrackMacro.hpp
Estimator/Estimator/: ComplexUtils.hpp  INCHeaders.hpp  JSONHandles.hpp  Makefile  README.txt  VectorUtils.hpp  guesses.txt  main.cpp
MemoryMap/: file_map.cpp  file_map.hpp
MemoryMap/test/: CMakeLists.txt  test.cpp  test2.cpp  test3_random.cpp
basic-c++/: strings-intro.cpp
compiler/: init_order.md
concepts/: CMakeLists.txt  iterable.hpp  sequence.hpp
containers/: Queue.hpp  Stack.hpp
containers/test/: CMakeLists.txt  testQueue.cpp  testStack.cpp
dependency/def-use/: dependency_list.hpp
general_utilities/: SortFunctors.h  algorithm.hpp  complex_utils.hpp  debug.h  file_type.hpp  general_algorithm.hpp  go.sh  go_server_utilities.sh  html_parser.py  list_utils.hpp  map_utils.hpp  process_poll.py  read_secretly.sh  scrape-yt.py  string_utils.hpp  test_utils.hpp  typeinfo.cpp
general_utilities/scripts/: merge-repo.sh
git/: git-commands.md
graph/: graph.hpp  graph_algorithms.hpp  graph_utilities.hpp  tree.hpp
graph/test/: CMakeLists.txt
hecp/: README.md
interview/: CMakeLists.txt  README.md  TODO  amazing-number.cpp  binary-tree-2-linked-list.cpp  can-cross-river.cpp  current-time.cpp  find_missing_and_duplicate.py  first-n-elements.cpp  getMiddleSLL.cpp  in-order.cpp  kmp.cpp  lis.cpp  maxArraySum.cpp  num2string.cpp  post-order.cpp  pre-order.cpp  read.cpp  reverseSinglyLinkedList.cpp  singly_list.h  stevens-capital-first-n.cpp  sum2-multi.cpp  sum2.cpp  wordBreak.cpp
interview/go/: binary_tree_serialize_deserialize.cpp  create_maze.cpp  frog_matrix_energy_cost.cpp  numbers_smaller_than_k_in_matrix.cpp  tensor_shape.cpp
interview/sifive/: compiler-question.md
interview/snap/: Questions.md
interview/test_steve/: bash_rand.sh  t1.txt  t2.txt  test_stev.txt
llvm/: thin-lto.md
network/SimpleClientServer/: client.c  error_handle.h  server.c
project_euler/: First.cpp
python_scripts/: copy_dir.py  html_parser.py  ping-services-for-wordpress-posts.txt  python_blink.py  scrape-yt-py3.py  send_sms.py
standard/: CMakeLists.txt  cons.hpp  hof.hpp
statistics/: CMakeLists.txt  histogram.hpp
tensorflow/: FeatureEngineering.md  GClab.md  Simple-Dataflow-pipeline-beam  c_neuralnetwork.py  d_customestimator.ipynb  handtuning.py  hyperparam_tuning.ipynb  scaling-up-ml-using-cmle.py  taxifare-trainer-model.py  tensorboard.md  tf-distributed-training-and-monitoring.py  tf-estimator-large-dataset.py  tf-estimator.md  tf-exercises.md  tf-train-large-datasets.md  tf-trying-features.py  tf_start.py
test/: CMakeLists.txt  test_FoF.cpp  test_cons.cpp  test_find_size.cpp  test_fof.cpp
test/statistics/: CMakeLists.txt  strip_obj.sh  test_file_for_histogram  test_histogram.cpp
thread/: matfile_1  matfile_2  matmul.cpp
thread/my_mtl/: Mutex.hpp  Thread.hpp
thread/my_mtl/test/: CMakeLists.txt  ThreadHello.cpp
tools/: README.md
trunk/: cons.hpp  find_size.hpp  hof.hpp
trunk/ClangProject/: ASTConsumer.cpp  ASTConsumer.hpp  InstantiatePP.cpp  InvokeParser.cpp  TrackMacro.hpp
trunk/Estimator/Estimator/: Estimator.pro  Location.hpp
trunk/Estimator/Estimator-build-desktop/: Makefile
trunk/MemoryMap/: MemoryMap.cpp  MemoryMap.hpp  file_map.hpp
trunk/MemoryMap/test/: map1.txt  map2.txt  test1_writing.cpp  test2_reading.cpp
trunk/containers/: Queue.hpp  Stack.hpp
trunk/containers/test/: CMakeLists.txt
trunk/general_utilities/: PrintSet.h  PrintVector.h  SortFunctors.h  algorithm.hpp  process_poll.py  set_utils.hpp  sizeof.hpp  string_utils.hpp  vector_utils.hpp
trunk/general_utilities/test/: CMakeLists.txt
trunk/graph/: graph_utilities.hpp  tree.hpp
trunk/graph/test/: testBinaryTree.cpp
trunk/network/SimpleClientServer/: CMakeLists.txt
trunk/project_euler/: Second.cpp
trunk/standard/: cons.hpp  exceptions.hpp  find_size.hpp  hof.hpp
trunk/test/: CMakeLists.txt  test_hof.cpp
trunk/thread/: intro_thread.c
trunk/thread/my_mtl/test/: ThreadHello.cpp
