CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(FOOL)
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} "/home/hiraditya/work/fool")
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} "/home/hiraditya/work/origin")

set(cmake_cxx_flags "${CMAKE_CXX_FLAGS} -std=c++11 -g")
ADD_SUBDIRECTORY(containers)
ADD_SUBDIRECTORY(concepts)
ADD_SUBDIRECTORY(Estimator)
ADD_SUBDIRECTORY(graph)
ADD_SUBDIRECTORY(MemoryMap)
ADD_SUBDIRECTORY(project_euler)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(ClangProject)
ADD_SUBDIRECTORY(dependency)
ADD_SUBDIRECTORY(general_utilities)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(standard)
ADD_SUBDIRECTORY(thread)
