CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(FOOL)
set(DIR "/home/hiraditya/work/")
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} "${DIR}/fool/fool")
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} "${DIR}/origin")

set(cmake_cxx_flags "${CMAKE_CXX_FLAGS} -std=c++11 -g")
ADD_SUBDIRECTORY(containers)
ADD_SUBDIRECTORY(concepts)
ADD_SUBDIRECTORY(Estimator)
ADD_SUBDIRECTORY(graph)
ADD_SUBDIRECTORY(MemoryMap)
ADD_SUBDIRECTORY(project_euler)
ADD_SUBDIRECTORY(ClangProject)
ADD_SUBDIRECTORY(dependency)
ADD_SUBDIRECTORY(general_utilities)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(standard)
ADD_SUBDIRECTORY(statistics)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(test)
