cmake_minimum_required(VERSION 2.5)
project(test)
set(cmake_cxx_compiler "g++")
set(cmake_cxx_flags "${CMAKE_CXX_FLAGS} -std=c++0x -g")
include_directories("${cmake_source_directory} /home/vmplanet/Documents/examples/cplusplus")
include_directories("${cmake_source_directory} /home/vmplanet/Documents/examples/cplusplus/origin-read-only")
#add_executable(test test_int.cpp)
add_executable(test_hof test_hof.cpp)
add_executable(test_fof test_fof.cpp) 
add_executable(test_cons test_cons.cpp) 
add_executable(test_find_size test_find_size.cpp)
